--- a/jaxws-spring-webservice-server/pom.xml
+++ b/jaxws-spring-webservice-server/pom.xml
@@ -2,10 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.athieme</groupId>
-    <artifactId>jaxws-spring-server</artifactId>
+    <artifactId>jaxws-spring-webservice-server</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>jaxws-spring-server Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <properties>
         <spring.version>3.2.4.RELEASE</spring.version>
