added client and junit test; I really don't like the structure of dependencies (client depends on server, includes server jar) and especially don't like that I temporarily had to change server from being packaged as jar (to get it included in client) instead of war; will have to fix that

--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,6 @@
     </properties>
     <modules>
         <module>jaxws-spring-webservice-server</module>
+        <module>jaxws-spring-webservice-client</module>
     </modules>
 </project>
