--- a/jaxws-spring-webservice-client/pom.xml
+++ b/jaxws-spring-webservice-client/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.athieme</groupId>
-    <artifactId>jaxws-spring-webservice-server</artifactId>
+    <artifactId>jaxws-spring-webservice-client</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <url>http://maven.apache.org</url>
@@ -10,6 +10,11 @@
         <spring.version>3.2.4.RELEASE</spring.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.athieme</groupId>
+            <artifactId>jaxws-spring-webservice-server</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
