--- a/jaxws-spring-webservice-server/pom.xml
+++ b/jaxws-spring-webservice-server/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.athieme</groupId>
     <artifactId>jaxws-spring-webservice-server</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
     <url>http://maven.apache.org</url>
     <properties>
